--- a/config/gradle/env.gradle
+++ b/config/gradle/env.gradle
@@ -68,6 +68,13 @@ if (executingTasks == null || executingTasks.isEmpty()
     ignoredEnv = true
 }
 
+ext.isStartupFromCode = {
+    return isRunTask(['bootRun', ':bootRun'])
+}
+
+ext.isStartupFromDocker = {
+    return isDockerBuild()
+}
 
 //if (executingTasks == null || executingTasks.isEmpty()
 //        || 'jib' in executingTasks
