--- a/flycat-spi-impl/flycat-config-nacos/build.gradle
+++ b/flycat-spi-impl/flycat-config-nacos/build.gradle
@@ -1,6 +1,7 @@
 
 dependencies {
     api project(':flycat-spi')
-    implementation group: 'com.alibaba.nacos', name: 'nacos-client', version: '0.9.1'
+//    implementation group: 'com.alibaba.nacos', name: 'nacos-client', version: '0.9.1'
+    api group: 'com.alibaba.nacos', name: 'nacos-client', version: '2.1.2'
 }
 
