--- a/deploy/docker/local/docker-compose.traefik.yml
+++ b/deploy/docker/local/docker-compose.traefik.yml
@@ -20,6 +20,7 @@ services:
       - "traefik.http.routers.dashboard.rule=Host(`${GATEWAY_DOMAIN}`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))"
 #      - "traefik.http.routers.dashboard.rule=(PathPrefix(`/api`) || PathPrefix(`/dashboard`))"
       - "traefik.http.routers.dashboard.service=api@internal"
+#      - "traefik.http.middlewares.auth.basicauth.users=zgqq:$2y$05$D3wgkNVgGqcUn9y2CzMeLuE0xW/vkho2N5LHGAa1dSwnBlNZ5uph2"
       - "traefik.http.routers.dashboard.middlewares=auth"
       - "traefik.http.middlewares.auth.basicauth.users=${AUTH_USERS}"
 #      - "traefik.http.middlewares.auth.basicauth.users=zgqq:$2y$05$D3wgkNVgGqcUn9y2CzMeLuE0xW/vkho2N5LHGAa1dSwnBlNZ5uph2"
