--- a/config/gradle/autoConfigure.gradle
+++ b/config/gradle/autoConfigure.gradle
@@ -34,10 +34,6 @@ ext.getConfigValue = { configData, key, env, defaultValue = null ->
     env = env.toString()
     // Method body here
     println("getConfigValue ${key}, ${env}")
-//    if ('env_overwrite' in configData.keySet() && env in configData['env_overwrite']) {
-//        if (key in configData['env_overwrite'][env].keySet())
-//            return configData['env_overwrite'][env][key]
-//    }
     if ('env_overwrite' in configData.keySet() && configData['env_overwrite'].containsKey(env)) {
         if (key in configData['env_overwrite'][env].keySet())
             return configData['env_overwrite'][env][key]
@@ -48,6 +44,37 @@ ext.getConfigValue = { configData, key, env, defaultValue = null ->
     return defaultValue
 }
 
+
+ext.getConfigConnectValue = { configData, key, env, defaultValue = null ->
+    env = env.toString()
+    def connectKey
+    if (!isDockerBuild()) {
+        connectKey = env + "_not_docker"
+    }  else {
+        connectKey = env
+    }
+    // Method body here
+    println("getConfigConnectValue ${key}, ${connectKey}")
+    if ('connected_from' in configData.keySet() && configData['connected_from'].containsKey(connectKey)) {
+        if (key in configData['connected_from'][connectKey].keySet())
+            return configData['connected_from'][connectKey][key]
+    }
+    if (connectKey in configData.keySet()) {
+        return configData[connectKey]
+    }
+    return getConfigValue(configData, key, env, defaultValue)
+}
+
+
+ext.getSubConfigConnectValue = { name, key, env, defaultValue = null ->
+    env = env.toString()
+    println("getSubConfigConnectValue ${name}, ${key}, ${env} ")
+    if (name in data.keySet()) {
+        def configData = data[name]
+        return getConfigConnectValue(configData, key, env, defaultValue)
+    }
+    return defaultValue
+}
 
 ext.getSubConfigValue = { name, key, env, defaultValue = null ->
     env = env.toString()
@@ -74,13 +101,10 @@ ext.addCustomJvmArgs = { argsArr ->
 
 
 if (getSubConfigValue('infra_redis', 'enable', env)) {
-    def host = getSubConfigValue('infra_redis', 'host', env)
-    def password = getSubConfigValue('infra_redis', 'password', env)
-    def port = getSubConfigValue('infra_redis', 'port', env)
+    def host = getSubConfigConnectValue('infra_redis', 'host', env)
+    def password = getSubConfigConnectValue('infra_redis', 'password', env)
+    def port = getSubConfigConnectValue('infra_redis', 'port', env)
 
-    if (isStartupFromCode()) {
-        host = "localhost"
-    }
     addCustomJvmArgs(["-Dflycat.redis.primary.enabled=true",
                       "-Dflycat.redis.primary.host=${host}".toString(),
                       "-Dflycat.redis.primary.port=${port}".toString(),
@@ -90,8 +114,8 @@ if (getSubConfigValue('infra_redis', 'enable', env)) {
 
 
 if (getSubConfigValue('infra_nacos', 'enable', env)) {
-    def host = getSubConfigValue('infra_nacos', 'host', env)
-    def port = getSubConfigValue('infra_nacos', 'port', env)
+    def host = getSubConfigConnectValue('infra_nacos', 'host', env)
+    def port = getSubConfigConnectValue('infra_nacos', 'port', env)
 
     def nacosUser = getSubConfigValue('infra_nacos', 'nacos_user', env)
     def nacosPassword = getSubConfigValue('infra_nacos', 'nacos_password', env)
