--- a/deploy/docker/common/docker-compose.mysql.yml
+++ b/deploy/docker/common/docker-compose.mysql.yml
@@ -3,10 +3,11 @@ services:
   db:
     container_name: "db-mysql"
 #    platform: linux/x86_64
-    image: mysql:8.0.31
+#    image: mysql:8.0.31
+    image: mariadb:10.9.3
     restart: always
     volumes:
-      - ~/deploy/data/mysql8:/var/lib/mysql
+      - ~/deploy/data/mariadb10:/var/lib/mysql
     command: mysqld --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
     networks:
       - infra
