--- a/config/gradle/autoConfigure.gradle
+++ b/config/gradle/autoConfigure.gradle
@@ -1,106 +1,17 @@
 import groovy.json.JsonSlurper
-
 def jsonSlurper = new JsonSlurper()
 
-def configFile = "./config.json"
-if (hasProperty("config")) {
-    configFile = config
-}
-
-def fileObj = new File(configFile)
-if (!fileObj.isFile()) {
-    println("Not found config file " + configFile)
-    return
-}
-
-def data = jsonSlurper.parse(fileObj)
-ext.configObj = data
-
 //if (hasProperty("configKey")) {
-//    data = data[configKey]
+//    configObj = data[configKey]
 //}
 
-//get_data_value(key, env) {
-//    if 'env_overwrite' in data.keys() and env in data['env_overwrite']:
-//    if key in data['env_overwrite'][env].keys():
-//    return data['env_overwrite'][env][key]
-//    return data[key]
+//get_configObj_value(key, env) {
+//    if 'env_overwrite' in configObj.keys() and env in data['env_overwrite']:
+//    if key in configObj['env_overwrite'][env].keys():
+//    return configObj['env_overwrite'][env][key]
+//    return configObj[key]
 //}
 
-println("Read config: ${data}")
-//rootProject.name = data['app_name']
-
-ext.getConfigValue = { configData, key, env, defaultValue = null ->
-    env = env.toString()
-    // Method body here
-    println("getConfigValue ${key}, ${env}")
-    if ('env_overwrite' in configData.keySet() && configData['env_overwrite'].containsKey(env)) {
-        if (key in configData['env_overwrite'][env].keySet())
-            return configData['env_overwrite'][env][key]
-    }
-    if (key in configData.keySet()) {
-        return configData[key]
-    }
-    return defaultValue
-}
-
-
-ext.getConfigConnectValue = { configData, key, env, defaultValue = null ->
-    env = env.toString()
-    def connectKey
-    if (!isDockerBuild()) {
-        connectKey = env + "_not_docker"
-    } else {
-        connectKey = env
-    }
-    // Method body here
-    println("getConfigConnectValue ${key}, ${connectKey}")
-    if ('connected' in configData.keySet() && configData['connected'].containsKey(connectKey)) {
-        if (key in configData['connected'][connectKey].keySet())
-            return configData['connected'][connectKey][key]
-    }
-    if ('common' in configData['connected'].keySet() && key in configData['connected']['common'].keySet()) {
-        return configData['connected']['common'][key]
-    }
-    if (connectKey in configData.keySet()) {
-        return configData[connectKey]
-    }
-    return getConfigValue(configData, key, env, defaultValue)
-}
-
-
-ext.getSubConfigConnectValue = { name, key, env, defaultValue = null ->
-    env = env.toString()
-    println("getSubConfigConnectValue ${name}, ${key}, ${env} ")
-    if (name in data.keySet()) {
-        def configData = data[name]
-        return getConfigConnectValue(configData, key, env, defaultValue)
-    }
-    return defaultValue
-}
-
-ext.getSubConfigValue = { name, key, env, defaultValue = null ->
-    env = env.toString()
-    println("getSubConfigValue ${name}, ${key}, ${env} ")
-    if (name in data.keySet()) {
-        def configData = data[name]
-//        def arr = ['local', 'dev']
-//        println("get env_overwrite ${name}, ${key}, env:${env}, ${configData['env_overwrite'].keySet()}," +
-//                "${'env_overwrite' in configData.keySet()},env in env_overwrite:${env.toString() in configData['env_overwrite'].keySet()}, " +
-//                "${'local' in arr}, ${arr}, ss${configData['env_overwrite'].containsKey(env)}")
-        return getConfigValue(configData, key, env, defaultValue)
-    }
-    return defaultValue
-}
-
-
-ext.addCustomJvmArgs = { argsArr ->
-    if (project.hasProperty('customJvmArgs')) {
-        ext.customJvmArgs += argsArr
-    } else {
-        ext.customJvmArgs = argsArr
-    }
-}
 
 
 def autoConfigMap = new TreeMap<String, String>();
@@ -156,12 +67,13 @@ if (getSubConfigValue('infra_sba', 'enable', env)) {
 //"spring.security.user.password": "zgq",
 //"spring.boot.admin.client.username": "zgqq",
 //"spring.boot.admin.client.password": "zgqq",
-//"spring.boot.admin.client.metadata.user.name": "${spring.security.user.name}",
-//"spring.boot.admin.client.metadata.user.password": "${spring.security.user.password}",
-
+//"spring.boot.admin.client.metaconfigObj.user.name": "${spring.security.user.name}",
+//"spring.boot.admin.client.metaconfigObj.user.password": "${spring.security.user.password}",
 }
 
-
+if (getConfigValue(configObj, 'router_path', env)) {
+    autoConfigMap.put("server.servlet.context-path", getConfigValue(configObj, 'router_path', env))
+}
 
 //def executeDockerBuild = false
 //def executingTasks = project.gradle.startParameter.taskNames
@@ -183,7 +95,7 @@ if (isDockerBuild()) {
 }
 
 
-def profilePath = fileObj.getParent() + "/profile.json"
+def profilePath = configFileObj.getParent() + "/profile.json"
 def config = new File(profilePath)
 if (!config.isFile()) {
     println("Not found profile file " + profilePath)
@@ -192,7 +104,6 @@ if (!config.isFile()) {
 
 
 def profileConf = jsonSlurper.parse(config)
-
 def handleConf = { configMap, profileConfig ->
     profileConfig.each { key, value ->
         if (key != "env_overwrite") {
