--- a/flycat-springboot/flycat-sba/build.gradle
+++ b/flycat-springboot/flycat-sba/build.gradle
@@ -31,8 +31,8 @@ ext.gradleConfigDir = "${configDir}/gradle"
 ext.vJavaLang = '17'
 
 apply from: "${gradleConfigDir}/env.gradle"
-apply from: "${gradleConfigDir}/autoConfigure.gradle"
-
+//apply from: "${gradleConfigDir}/autoConfigure.gradle"
+apply from: "${gradleConfigDir}/readJsonConfig.gradle"
 
 
 //spring.security.user.name: zgqq
