--- a/config/gradle/readJsonConfig.gradle
+++ b/config/gradle/readJsonConfig.gradle
@@ -44,15 +44,17 @@ ext.getConfigConnectValue = { configData, key, env, defaultValue = null ->
         connectKey = env
     }
     // Method body here
-    println("getConfigConnectValue ${key}, ${connectKey}")
     if ('connected' in configData.keySet() && configData['connected'].containsKey(connectKey)) {
         if (key in configData['connected'][connectKey].keySet())
+            println("getConfigConnectValue from env, ${key}, ${connectKey}, ${configData['connected'][connectKey][key]}")
             return configData['connected'][connectKey][key]
     }
     if ('common' in configData['connected'].keySet() && key in configData['connected']['common'].keySet()) {
+        println("getConfigConnectValue from common, ${key}, ${env}, ${configData['connected']['common'][key]}")
         return configData['connected']['common'][key]
     }
     if (connectKey in configData.keySet()) {
+        println("getConfigConnectValue from main, ${key}, ${connectKey}, ${configData[connectKey]}")
         return configData[connectKey]
     }
     return getConfigValue(configData, key, env, defaultValue)
