--- a/config/gradle/bootappProject.gradle
+++ b/config/gradle/bootappProject.gradle
@@ -13,8 +13,8 @@ configurations {
     }
 }
 
-apply plugin: 'io.spring.dependency-management'
-apply plugin: 'org.springframework.boot'
+//apply plugin: 'io.spring.dependency-management'
+//apply plugin: 'org.springframework.boot'
 
 dependencies {
     if (!isProd(env)) {
